--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,12 @@
 }
 
 body {
-    /* background-image:url("../images/staples2.jpg") */
     font-size: 18px;
     line-height: 34px;
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
+    background: url(../images/staples.jpg);
+    background-size: cover;
 }
 
 .container {
@@ -200,6 +201,7 @@ footer {
 
 #contact-form ul {
     margin-bottom: 20px;
+    list-style-type: none;
 }
 
 #contact-form li {
@@ -227,11 +229,13 @@ textarea {
     height: 200px;
 }
 
-input [type=submit] {
+#submit {
     background: #4a54aa;
     border: 0 none;
     color: #fff;
     font-size: 18px;
     padding: 10px 30px;
     cursor: pointer;
+    border-radius: 4px;
+    margin-left: 40px;
 }
